simple collision detection

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html>
 	<head>
 	    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-		<script type="text/javascript" src="app.js"></script>
+		<script type="text/javascript" src="animations.js"></script>
+	    <script type="text/javascript" src="map.js"></script>
+	    <script type="text/javascript" src="mapObject.js"></script>
 		<script type="text/javascript" src="dot.js"></script>
 	    <script type="text/javascript" src="events.js"></script>
+		<script type="text/javascript" src="app.js"></script>
 	</head>
-	<body style="text-align: center;">
-		<canvas width="1800" height="900p" style="border:1px solid blue; width:1800px; height:900px; margin-left:auto; margin-right:auto;"  oncontextmenu="return false;"></canvas>
-	</body>
+	<body style="text-align: center; margin:0; padding:0;">
+		<canvas id="dot" width="1900" height="1000" style="border:1px solid blue; width:1900px; height:1000px; margin-left:auto; margin-right:auto;"  oncontextmenu="return false;"></canvas>
+<!-- 		<canvas id="dotLayer" width="1800" height="900p" style="border:1px solid blue; width:1800px; height:900px; margin-left:auto; margin-right:auto;"  oncontextmenu="return false;"></canvas>
+ -->	</body>
 </html>
