basic interactions visualized

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
 	    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	    <script type="text/javascript" src="helpers.js"></script>
+	    <script type="text/javascript" src="colors.js"></script>
 		<script type="text/javascript" src="animations.js"></script>
 	    <script type="text/javascript" src="map.js"></script>
 	    <script type="text/javascript" src="mapObject.js"></script>
