--- a/index.html
+++ b/index.html
@@ -1,17 +1,40 @@
 <html>
 	<head>
+		<link rel="stylesheet" href="style/style.css">
 	    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-	    <script type="text/javascript" src="helpers.js"></script>
-	    <script type="text/javascript" src="colors.js"></script>
-		<script type="text/javascript" src="animations.js"></script>
-	    <script type="text/javascript" src="map.js"></script>
-	    <script type="text/javascript" src="mapObject.js"></script>
-		<script type="text/javascript" src="dot.js"></script>
-	    <script type="text/javascript" src="events.js"></script>
-		<script type="text/javascript" src="app.js"></script>
+	    <script src="http://cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js" type="text/javascript"></script>
+	    <script type="text/javascript" src="configuration/config.js"></script>
+	    <script type="text/javascript" src="app/helpers.js"></script>
+	    <script type="text/javascript" src="app/colors.js"></script>
+		<script type="text/javascript" src="app/animations.js"></script>
+	    <script type="text/javascript" src="app/map.js"></script>
+	    <script type="text/javascript" src="app/mapObject.js"></script>
+		<script type="text/javascript" src="app/dot.js"></script>
+		<script type="text/javascript" src="app/farm.js"></script>		
+	    <script type="text/javascript" src="app/events.js"></script>
+		<script type="text/javascript" src="app/app.js"></script>
+		<script type="text/javascript" src="app/statistics.js"></script>
 	</head>
-	<body style="text-align: center; margin:0; padding:0;">
-		<canvas id="dot" width="1900" height="1000" style="border:1px solid blue; width:1900px; height:1000px; margin-left:auto; margin-right:auto;"  oncontextmenu="return false;"></canvas>
+	<body>
+		<canvas id="dot" width="1600" height="800" oncontextmenu="return false;"></canvas>
 <!-- 		<canvas id="dotLayer" width="1800" height="900p" style="border:1px solid blue; width:1800px; height:900px; margin-left:auto; margin-right:auto;"  oncontextmenu="return false;"></canvas>
- -->	</body>
+ -->	
+ 		<div id="stats">
+ 			<p>Dots count:<span data-bind='text:stats.counters.dots'></span></p>
+ 			<p>Map created in:
+ 				<span data-bind='text:stats.timers.mapCreate'></span>
+ 				ms
+ 			</p>
+ 			<p>
+ 				Dots created in:
+ 				<span data-bind='text:stats.timers.dotsCreate'></span>
+ 				ms
+ 			</p>
+ 			<p>
+ 				Drawn in:
+ 				<span data-bind='text:stats.timers.draw'></span>
+ 				ms
+ 			</p>
+ 		</div>
+ 	</body>
 </html>
