--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 	    <script src="http://cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js" type="text/javascript"></script>
 	    <script type="text/javascript" src="configuration/config.js"></script>
+	    <script type="text/javascript" src="configuration/colors.js"></script>
 	    <script type="text/javascript" src="app/helpers.js"></script>
-	    <script type="text/javascript" src="app/colors.js"></script>
 		<script type="text/javascript" src="app/animations.js"></script>
 	    <script type="text/javascript" src="app/map.js"></script>
 	    <script type="text/javascript" src="app/mapObject.js"></script>
