--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="style/style.css">
-	    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-	    <script src="http://cdnjs.cloudflare.com/ajax/libs/knockout/3.1.0/knockout-min.js" type="text/javascript"></script>
-	    <script type="text/javascript" src="configuration/config.js"></script>
-	    <script type="text/javascript" src="configuration/colors.js"></script>
-	    <script type="text/javascript" src="app/helpers.js"></script>
-		<script type="text/javascript" src="app/animations.js"></script>
-	    <script type="text/javascript" src="app/map.js"></script>
-	    <script type="text/javascript" src="app/mapObject.js"></script>
-		<script type="text/javascript" src="app/dot.js"></script>
-		<script type="text/javascript" src="app/farm.js"></script>		
-	    <script type="text/javascript" src="app/events.js"></script>
-		<script type="text/javascript" src="app/app.js"></script>
-		<script type="text/javascript" src="app/statistics.js"></script>
+		<script data-main="app.js" src="vendor/require.js"></script>
 	</head>
 	<body>
 		<canvas id="dot" width="1600" height="800" oncontextmenu="return false;"></canvas>
 <!-- 		<canvas id="dotLayer" width="1800" height="900p" style="border:1px solid blue; width:1800px; height:900px; margin-left:auto; margin-right:auto;"  oncontextmenu="return false;"></canvas>
  -->	
+
+ 		<div id="tooltip"></div>
+
+
  		<div id="stats">
  			<p>Dots count:<span data-bind='text:stats.counters.dots'></span></p>
  			<p>Map created in:
@@ -34,6 +26,9 @@
  				Drawn in:
  				<span data-bind='text:stats.timers.draw'></span>
  				ms
+ 			</p>
+ 			<p>
+ 				<button onclick="stopGame">Stop/start</button>
  			</p>
  		</div>
  	</body>
