--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<script data-main="app.js" src="vendor/require.js"></script>
 	</head>
 	<body>
+        <canvas id="geography" width="1200" height="700" oncontextmenu="return false;"></canvas>
 		<canvas id="dot" width="1200" height="700" oncontextmenu="return false;"></canvas>
 <!-- 		<canvas id="dotLayer" width="1800" height="900p" style="border:1px solid blue; width:1800px; height:900px; margin-left:auto; margin-right:auto;"  oncontextmenu="return false;"></canvas>
  -->	
